feat: Unlist Communities (#324)
* feat: Unlist communities

* test: Fix tests

* test: Fix integration tests

* docs: Use proper visibility field

* test: Remove redundant scenarios

* test: Fix tests
